# embarcados_ros_nodelet

./: CMakeLists.txt  README.md  package.xml
launch/: embarcados_ros_nodelet.launch
plugins/: nodelet_plugins.xml
src/: embarcados_nodelet.cpp
